--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
+    "qs": "^6.9.6",
     "quasar": "^2.0.0-beta.1",
     "vue": "^3.0.0",
     "vue-cli-plugin-quasar": "^4.0.0-beta.1",
